[gd_scene load_steps=11 format=3 uid="uid://2q4yny3s3hw5"]

[ext_resource type="Script" path="res://Scripts/Objects/Living Room/livingroom_phone.gd" id="1_rwsbt"]
[ext_resource type="Texture2D" uid="uid://fsjstksg7dlg" path="res://Assets/UI/Pointer.png" id="2_rvx3y"]
[ext_resource type="AudioStream" uid="uid://chqf2438me76s" path="res://SFX/Notification.mp3" id="3_pdnv8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gjcug"]
atlas = ExtResource("2_rvx3y")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmnc1"]
atlas = ExtResource("2_rvx3y")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_pn27r"]
atlas = ExtResource("2_rvx3y")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0xt1"]
atlas = ExtResource("2_rvx3y")
region = Rect2(24, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_d55g7"]
atlas = ExtResource("2_rvx3y")
region = Rect2(32, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_wy5y0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjcug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmnc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pn27r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0xt1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d55g7")
}],
"loop": true,
"name": &"pointer",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_66x1h"]
size = Vector2(35.8125, 4)

[node name="livingroom_phone" type="Area2D" groups=["interactable", "objects", "phone"]]
position = Vector2(-12, 0)
collision_layer = 4
collision_mask = 2
script = ExtResource("1_rwsbt")

[node name="Pointer" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
z_index = 5
position = Vector2(12, -15)
sprite_frames = SubResource("SpriteFrames_wy5y0")
animation = &"pointer"

[node name="Cols" type="CollisionShape2D" parent="."]
z_index = 5
position = Vector2(4.90625, -2)
shape = SubResource("RectangleShape2D_66x1h")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_pdnv8")
volume_db = 4.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
